<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.5</version>
		<relativePath/>
	</parent>
	
	<groupId>com.matuto</groupId>
	<artifactId>matuto-boot</artifactId>
	<version>1.0.0</version>
	<packaging>pom</packaging>
	<name>matuto-boot</name>
	<description>Matuto Boot</description>
	
	<modules>
		<module>matuto-boot-common</module>
		<module>matuto-boot-system</module>
		<module>matuto-boot-admin</module>
	</modules>
	
	<properties>
		<java.version>17</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<mybatis-plus.version>3.5.9</mybatis-plus.version>
		<sa-token.version>1.44.0</sa-token.version>
		<lombok.version>1.18.36</lombok.version>
		<aliyun.oss.version>3.16.1</aliyun.oss.version>
		<tencent.cos.version>5.6.155</tencent.cos.version>
		<qiniu.kodo.version>7.13.1</qiniu.kodo.version>
		<hutool.version>5.8.25</hutool.version>
		<fastjson2.version>2.0.43</fastjson2.version>
		<knife4j.version>4.5.0</knife4j.version>
		<druid.version>1.2.20</druid.version>
		<commons-io.version>2.15.1</commons-io.version>
		<commons-collections4.version>4.4</commons-collections4.version>
		<kaptcha.version>2.3.2</kaptcha.version>
	</properties>
	
	<dependencyManagement>
		<dependencies>
			<!-- 内部模块依赖 -->
			<dependency>
				<groupId>com.matuto</groupId>
				<artifactId>matuto-boot-common</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.matuto</groupId>
				<artifactId>matuto-boot-system</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.matuto</groupId>
				<artifactId>matuto-boot-admin</artifactId>
				<version>${project.version}</version>
			</dependency>
			
			<!-- 第三方依赖 -->
			<dependency>
				<groupId>com.baomidou</groupId>
				<artifactId>mybatis-plus-spring-boot3-starter</artifactId>
				<version>${mybatis-plus.version}</version>
			</dependency>
			<dependency>
				<groupId>com.baomidou</groupId>
				<artifactId>mybatis-plus-jsqlparser</artifactId>
				<version>${mybatis-plus.version}</version>
			</dependency>
			<dependency>
				<groupId>cn.dev33</groupId>
				<artifactId>sa-token-spring-boot3-starter</artifactId>
				<version>${sa-token.version}</version>
			</dependency>
			<dependency>
				<groupId>cn.dev33</groupId>
				<artifactId>sa-token-jwt</artifactId>
				<version>${sa-token.version}</version>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
			</dependency>
			<dependency>
				<groupId>cn.hutool</groupId>
				<artifactId>hutool-all</artifactId>
				<version>${hutool.version}</version>
			</dependency>
			<dependency>
				<groupId>com.alibaba.fastjson2</groupId>
				<artifactId>fastjson2</artifactId>
				<version>${fastjson2.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.xiaoymin</groupId>
				<artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
				<version>${knife4j.version}</version>
			</dependency>
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>druid-spring-boot-starter</artifactId>
				<version>${druid.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-collections4</artifactId>
				<version>${commons-collections4.version}</version>
			</dependency>
			<dependency>
				<groupId>com.aliyun.oss</groupId>
				<artifactId>aliyun-sdk-oss</artifactId>
				<version>${aliyun.oss.version}</version>
			</dependency>
			<dependency>
				<groupId>com.qcloud</groupId>
				<artifactId>cos_api</artifactId>
				<version>${tencent.cos.version}</version>
			</dependency>
			<dependency>
				<groupId>com.qiniu</groupId>
				<artifactId>qiniu-java-sdk</artifactId>
				<version>${qiniu.kodo.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.penggle</groupId>
				<artifactId>kaptcha</artifactId>
				<version>${kaptcha.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
